<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="@dimen/_36sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_marginStart="@dimen/_4sdp"
    android:layout_marginEnd="@dimen/_4sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginBottom="@dimen/_8sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/tower"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/dBm"
            android:layout_toEndOf="@+id/image"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:text="@string/dbm"/>

        <View
            android:id="@+id/view"
            android:layout_below="@id/image"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/ashColor"/>

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_below="@+id/view"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/cl"/>

                <TextView
                    android:id="@+id/cl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/cl_value"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/tac"/>

                <TextView
                    android:id="@+id/tac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/tac_value"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/mcc"/>

                <TextView
                    android:id="@+id/mcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/mcc_value"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/mnc"/>

                <TextView
                    android:id="@+id/mnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/mnc_value"/>


            </LinearLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_menu_black_24dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>

